# mobile-arm-sim

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  package.xml
config/: controllers.yaml  nav2_params.yaml  slam_toolbox_mapping.yaml  view.rviz
launch/: autonomous.launch.py  display.launch.py  gazebo.launch.py  mapping.launch.py  nav2.launch.py  pick_place.launch.py
maps/: autonomous_map.pgm  autonomous_map.yaml
scripts/: autonomous_pick_place.py  block_detector.py  check_detector_math.py  move_arm_demo.py  pick_and_place.py  wiggle_arm.py
urdf/: block.sdf  distractor_brown.sdf  distractor_magenta.sdf  distractor_orange.sdf  mobile_arm.urdf.xacro  table.sdf
